# rag

./: .coverage  .dockerignore  .env.example  .gitignore  .replit  API_USAGE.md  BOAS_PRATICAS_CONFIGURACAO.md  CHANGELOG.md  COMO_TESTAR.py  CONFIG_SUMMARY.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCKER_USAGE.md  Dockerfile.api-multiagent  Dockerfile.api-simple  ESTRUTURA_FINAL.md  FAQ.md  GIT_RESOLVED.md  LIMPEZA_FINAL.md  ONDE_REACT_ENTRA.py  PROJECT_STATUS_FINAL.md  QUICKSTART.md  README.md  README_CONFIGURACAO.md  SEQUENCIA_EXECUCAO.py  SETUP_FINAL.md  VARIABLE_TRACKING.md  analise_memoria.py  api_multiagent.py  api_simple.py  avaliador.py  avaliador_otimizado.py  buscador.py  buscador_conversacional_producao.py  buscador_otimizado.py  check_documents.py  config.py  constants.py  delete_collection.py  delete_images.py  (+46 more)
api/: .env.example  README.md  __init__.py  dependencies.py  main.py  requirements.txt  test_api_complete.py  test_imports.py  test_indexing_research_routes.py  test_live_api.py  test_multiagent_zep_detailed.py  test_with_valid_token.py  test_zep_memory_search.py
api/core/: config.py  state.py
api/models/: schemas.py
api/routers/: __init__.py  indexing.py  management.py  research.py
api/utils/: errors.py  middleware.py
config/requirements/: api.txt  base.txt  dev.txt
docs/: ARCHITECTURE.md  CONFIG_SUMMARY.md  EXAMPLES.md  INDEXER_USAGE.md  PERFORMANCE.md  README.md  REORGANIZATION_PROPOSAL.md  THEORY.md  TROUBLESHOOTING.md  api-guide.md  api.md  architecture.md  development.md  enhanced-system.md  multi-agent.md  quick-start.md  reasoning.md  testing.md  utils.md
maintenance/: README.md  cleanup-all.sh  delete_collection.py  delete_documents.py  delete_images.py
multi-agent-researcher/: __init__.py  pyproject.toml  test_enhanced_system.py
multi-agent-researcher/examples/: rag_research.py
multi-agent-researcher/src/researcher/: __init__.py
multi-agent-researcher/src/researcher/agents/: base.py  basic_lead_researcher.py  document_search_agent.py  enhanced_rag_subagent.py  models.py  openai_lead_researcher.py
multi-agent-researcher/src/researcher/enhanced/: __init__.py  enhanced_config.py  enhanced_decomposition.py  enhanced_evaluation.py  enhanced_integration.py  enhanced_models.py  enhanced_synthesis.py  enhanced_unified_config.py
multi-agent-researcher/src/researcher/memory/: enhanced_memory.py
multi-agent-researcher/src/researcher/reasoning/: __init__.py  enhanced_react_reasoning.py  react_prompts.py  react_reasoning.py
multi-agent-researcher/src/researcher/tools/: optimized_rag_search.py
multi-agent-researcher/src/researcher/utils/: multiagent_logger.py
multimodal-rag-agents/: .env.example  README.md  config.py  pytest.ini  requirements.txt  run_demo.py  run_tests.py  setup.py  test_real_query.py
multimodal-rag-agents/examples/: __init__.py  basic_multimodal_rag.py
multimodal-rag-agents/src/rag_agents/: __init__.py
multimodal-rag-agents/src/rag_agents/agents/: __init__.py  answer_generator.py  base.py  context_analyzer.py  lead_rag.py  reranker.py  retriever.py
multimodal-rag-agents/src/rag_agents/models/: __init__.py  rag_models.py
multimodal-rag-agents/tests/: __init__.py  conftest.py
multimodal-rag-agents/tests/integration/: __init__.py  test_multimodal_rag_system.py
multimodal-rag-agents/tests/unit/: __init__.py  test_base_agent.py  test_config.py  test_lead_rag_agent.py  test_rag_models.py  test_retriever_agent.py
production_users/ilceccato88/: chat_history.json  user_stats.json
scripts/: find_hardcoded_values.sh  test_api.py  test_enhanced_integration.py  test_enhanced_system.py  test_full_pipeline.py  verify_config_consistency.py
scripts/maintenance/: delete_collection.py  delete_images.py
src/apis/v1/: dependencies.py  main.py
src/apis/v1/core/: __init__.py  state.py
src/apis/v1/models/: __init__.py
src/apis/v1/routers/: indexing.py  management.py
src/apis/v1/utils/: __init__.py
src/core/: config.py  constants.py  indexer.py  search.py
src/utils/: cache.py  diagnostico_simples.py  env_validation.py  logging_config.py  metrics.py  resource_manager.py  validation.py
tests/: FINAL_STATUS.md  FINAL_SUCCESS_REPORT.md  IMPLEMENTATION_REPORT.md  README.md  SUMMARY.md  UTILS_EXPANSION_REPORT.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_full_pipeline.py  teste_final_completo.py  teste_multiagente.py  teste_rag_basico.py
tests/e2e/: test_live_routes_with_auth.py
tests/fixtures/: test_data.py
tests/functional/: test_evaluator.py  test_search.py
tests/integration/: test_api_complete.py  test_indexer_integration.py  test_indexing_research_routes.py  test_multiagent_system.py
tests/unit/: quick_zep_test.py  test_agents.py  test_api_endpoints.py  test_cache.py  test_config.py  test_imports.py  test_indexer.py  test_metrics.py  test_reasoning.py  test_resource_manager.py  test_validation.py
upstash/: avaliador.py  buscador.py  indexador.py  rag_evaluation_detailed.txt  rag_evaluation_report.json
utils/: __init__.py  diagnostico_completo.py  validation.py
